Fixing slider spacing

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -94,7 +94,7 @@ td.todaymostpopular {
   width:550px;
   height:96%;
   /*height:253;*/
-  margin-left:4px;
+  margin-left:5px;
   margin-right: 4px;
   margin-top:5px;
   border:1px solid rgb(180,180,180);
